code/josh/javascript/josh_js_lab07/dictionary/css/styles.css
body {
    background: url("dictionary.jpg") no-repeat center;
    background-attachment: fixed;
    background-size: cover;
    margin: auto
}

.container {
    display: grid;
    grid-template-areas: 
    "header"
    "search"
    "result"
    "saved";
    text-align: center;
    justify-content: center;

}

/* .container > *{
    display: flex;
    max-width: 95vw;
    flex-flow: column wrap;
    justify-content: center;
    align-items: center;
    align-content: center;
} */

header {
    grid-area: header;
    background-color: rgb(226, 153, 43);
    width: 100vw
}

#search {
    grid-area: search;
    margin: 2vw 0 2vw 0;
}

#result {
    grid-area: result;
    max-width: 80vw;
    justify-content: center;
    text-align: center;
    margin: 0 auto 0 auto;
}

#result>p{
    background-color: rgba(226, 153, 43, 0.8);
}

#saved {
    grid-area: saved;
    display: flex;
    flex-flow: column wrap;
    text-align: center;
    /* align-self: center; */
    /* justify-content: center; */
    align-content: center;
    max-width: 80vw;
    margin: 2vw, 10vw, 2vw, 10vw !important;
    background-color: rgba(226, 153, 43, 0.8);
}

img {
    max-width: 15px;
    max-height: 15px;
    /* display: block; */
    /* margin-left: auto;
    margin-right: auto; */
}

